# libdmt

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  UserGuide.md
examples/: example_2d.cpp  example_3d.cpp  example_dmf.cpp  example_surface.cpp
include/: DiscreteVectorField.hpp  Simplex.hpp  SimplicialComplex.hpp
tests/: test_dmt.cpp
